# glimpse

./: .gitignore  CLAUDE.md  DESIGN.md  README.en.md  README.ja.md  README.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report_en.yml  bug_report_ja.yml
.github/workflows/: ci.yml  release.yml
src/: App.tsx  index.css  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  config.rs  database.rs  error.rs  image_processor.rs  lib.rs  main.rs
src/components/: BatchActionBar.test.tsx  BatchActionBar.tsx  CompareView.test.tsx  CompareView.tsx  DetailView.test.tsx  DetailView.tsx  EmptyFolderState.tsx  EmptyState.test.tsx  EmptyState.tsx  ExportDialog.tsx  GalleryView.test.tsx  GalleryView.tsx  Header.tsx  HelpDialog.test.tsx  HelpDialog.tsx  SettingsDialog.tsx  StatusBar.test.tsx  StatusBar.tsx  ThumbnailGrid.tsx  ThumbnailItem.test.tsx  ThumbnailItem.tsx  Toolbar.test.tsx  Toolbar.tsx  UpdateNotification.tsx  index.ts
src/hooks/: index.ts  useApi.ts  useDragAndDrop.ts  useGridConfig.ts  useImageLabels.test.ts  useImageLabels.ts  useKeyboardNavigation.test.ts  useKeyboardNavigation.ts
src/i18n/: context.test.tsx  context.tsx  index.ts  types.ts
src/i18n/translations/: en.ts  ja.ts
src/test/: setup.ts
src/types/: index.ts
src/utils/: notification.ts  platform.test.ts  platform.ts  tauri.test.ts  tauri.ts  updateChecker.ts
