[package]
name = "glimpse"
version = "0.1.4"
description = "High-speed photo checker for stage photography"
authors = ["Daigo"]
license = "MIT"
repository = ""
edition = "2021"

[lib]
name = "glimpse_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# 画像処理
image = { version = "0.25", features = ["jpeg", "png"] }
rawloader = "0.37"
imagepipe = "0.5"

# 非同期・並列処理
tokio = { version = "1", features = ["full"] }
rayon = "1.10"

# データベース
rusqlite = { version = "0.32", features = ["bundled"] }

# EXIF情報
kamadak-exif = "0.5"

# ユーティリティ
sha2 = "0.10"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
walkdir = "2"
thiserror = "2"

[dev-dependencies]
tempfile = "3"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
